--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ ultralytics==8.0.26
 hydra-core>=1.2.0
 matplotlib>=3.2.2
 numpy>=1.18.5
-opencv-python==4.5.4.60
+opencv-python
 Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
@@ -15,4 +15,5 @@ torchvision>=0.8.1
 tqdm>=4.64.0
 filterpy==1.4.5
 scikit-image==0.19.3
+numpy==1.21.4
 lap==0.4.0
